--- a/Changes
+++ b/Changes
@@ -15,6 +15,7 @@
     * The get_method_class_basic_type_id Native Runtime API was added.
     * The get_field_class_basic_type_id Native Runtime API was added.
     * The get_class_var_class_basic_type_id Native Runtime API was added.
+    * The get_basic_type_parent_class_basic_type_id Native Runtime API was added.
   [Incompatible Changes]
     * The get_field_type_id Native Runtime API was removed.
     * The get_method_return_type_id Native Runtime API was removed.
