The following Native Runtime APIs were removed.
    * The following Native Runtime APIs were removed.
      int32_t (*get_field_class_id)(void* runtime, int32_t basic_type_id);
      int32_t (*get_method_class_id)(void* runtime, int32_t basic_type_id);
      int32_t (*get_class_var_class_id)(void* runtime, int32_t basic_type_id);

--- a/Changes
+++ b/Changes
@@ -28,6 +28,9 @@
       int32_t (*get_type_is_ref)(void* runtime, int32_t type_id);
       int32_t (*get_type_flag)(void* runtime, int32_t type_id);
       int32_t (*get_basic_type_class_id)(void* runtime, int32_t basic_type_id);      
+      int32_t (*get_field_class_id)(void* runtime, int32_t basic_type_id);      
+      int32_t (*get_method_class_id)(void* runtime, int32_t basic_type_id);      
+      int32_t (*get_class_var_class_id)(void* runtime, int32_t basic_type_id);      
     * The following Native Runtime APIs were changed.
       -  int32_t (*get_class_var_id_by_index)(void* runtime, int32_t class_id, int32_t class_var_index);
       +  int32_t (*get_class_var_id_by_index)(void* runtime, int32_t basic_type_id, int32_t class_var_index);
