--- a/Changes
+++ b/Changes
@@ -32,6 +32,19 @@
       int32_t (*get_method_class_id)(void* runtime, int32_t basic_type_id);
       int32_t (*get_class_var_class_id)(void* runtime, int32_t basic_type_id);
       int32_t (*get_class_id_by_name)(void* runtime, const char* class_name);
+      int32_t (*get_class_name_id)(void* runtime, int32_t class_id);
+      int32_t (*get_class_class_rel_file_id)(void* runtime, int32_t class_id);
+      int32_t (*get_class_class_path_id)(void* runtime, int32_t class_id);
+      int32_t (*get_class_is_anon)(void* runtime, int32_t class_id);
+      int32_t (*get_class_fields_base_id)(void* runtime, int32_t class_id);
+      int32_t (*get_class_fields_length)(void* runtime, int32_t class_id);
+      int32_t (*get_class_methods_base_id)(void* runtime, int32_t class_id);
+      int32_t (*get_class_methods_length)(void* runtime, int32_t class_id);
+      int32_t (*get_class_class_vars_base_id)(void* runtime, int32_t class_id);
+      int32_t (*get_class_class_vars_length)(void* runtime, int32_t class_id);
+      int32_t (*get_class_anon_methods_base_id)(void* runtime, int32_t class_id);
+      int32_t (*get_class_anon_methods_length)(void* runtime, int32_t class_id);
+
     * The following Native Runtime APIs were changed.
       -  int32_t (*get_class_var_id_by_index)(void* runtime, int32_t class_id, int32_t class_var_index);
       +  int32_t (*get_class_var_id_by_index)(void* runtime, int32_t basic_type_id, int32_t class_var_index);
