--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
 0.989006 2023-06-16
+  [New Features]
+    * The get_classes_length method in the Runtime class was added.
+    
   [Incompatible Changes]
     * The following Native Runtime APIs were changed.
       -  int32_t (*get_basic_type_class_path_id)(void* runtime, int32_t basic_type_id);
