--- a/Changes
+++ b/Changes
@@ -41,6 +41,7 @@
       8 SPVM_NATIVE_C_BASIC_TYPE_CATEGORY_ANY_OBJECT
     * The get_classes_length method in the Runtime class was removed.
     * The get_class_names in the Runtime class was removed.
+    * The get_parent_class_name in the Runtime class was renamed to the get_basic_type_parent_name method.
   [Breaking Binary Compatibility]
     * Binary compatibility was broken.
     
