--- a/Changes
+++ b/Changes
@@ -42,6 +42,7 @@
     * The get_classes_length method in the Runtime class was removed.
     * The get_class_names in the Runtime class was removed.
     * The get_parent_class_name in the Runtime class was renamed to the get_basic_type_parent_name method.
+    * The get_class_file in the Runtime class was renamed to the get_file method.
   [Breaking Binary Compatibility]
     * Binary compatibility was broken.
     
