--- a/Changes
+++ b/Changes
@@ -44,6 +44,7 @@
     * The get_parent_class_name in the Runtime class was renamed to the get_basic_type_parent_name method.
     * The get_class_file in the Runtime class was renamed to the get_file method.
     * The build_precompile_class_source in the Runtime class was renamed to the build_precompile_source method.
+    * The get_anon_class_names in the Runtime class was renamed to the get_basic_type_anon_basic_type_names method.
     
     * The following Native Precompile API were changed.
     
