--- a/Changes
+++ b/Changes
@@ -45,6 +45,11 @@
     * The get_class_file in the Runtime class was renamed to the get_file method.
     * The build_precompile_class_source in the Runtime class was renamed to the build_precompile_source method.
     * The get_anon_class_names in the Runtime class was renamed to the get_basic_type_anon_basic_type_names method.
+
+    * The following Native Runtime API were changed.
+    
+      -  int32_t (*get_method_is_class_method)(void* runtime, int32_t method_id);
+      +  int32_t (*get_method_is_static)(void* runtime, int32_t method_id);
     
     * The following Native Precompile API were changed.
     
@@ -64,6 +69,7 @@
 
       -  void (*clear_class_paths)(void* compiler);
       +  void (*clear_include_dirs)(void* compiler);
+
     * The class-path option in the spvmcc command was renamed to include-dir.
   [Breaking Binary Compatibility]
     * Binary compatibility was broken.
