The get_basic_type_is_class Native Runtime API was removed.
  [Incompatible Changes]
    * The get_basic_type_is_class Native Runtime API was removed.

--- a/Changes
+++ b/Changes
@@ -100,6 +100,7 @@
     * The get_method_return_type_id Native Runtime API was removed.
     * The get_type_stack_length Native Runtime API was removed.
     * The get_arg_type_id Native Runtime API was removed.
+    * The get_basic_type_is_class Native Runtime API was removed.
     * The following Native Runtime APIs were removed.
       int32_t (*get_type_basic_type_id)(void* runtime, int32_t type_id);
       int32_t (*get_type_dimension)(void* runtime, int32_t type_id);
