--- a/Changes
+++ b/Changes
@@ -114,6 +114,8 @@
       +  int32_t (*get_class_var_type_dimension)(void* runtime, int32_t class_var_address_id);
       +  int32_t (*get_class_var_type_flag)(void* runtime, int32_t class_var_address_id);
 
+      -  int32_t (*get_class_var_address_id_by_index)(void* runtime, int32_t basic_type_id, int32_t class_var_index);
+      +  void* (*get_class_var)(void* runtime, void* basic_type, int32_t class_var_index);
 
     * The following Native Runtime API were removed.
       -  int32_t (*get_anon_method_method_id)(void* runtime, int32_t anon_method_id);
