--- a/Changes
+++ b/Changes
@@ -117,6 +117,17 @@
       -  int32_t (*get_class_var_address_id_by_index)(void* runtime, int32_t basic_type_id, int32_t class_var_index);
       +  void* (*get_class_var)(void* runtime, void* basic_type, int32_t class_var_index);
 
+      -  int32_t (*get_class_var_name_id)(void* runtime, int32_t class_var_address_id);
+      +  int32_t (*get_class_var_name_id)(void* runtime, void* class_var);
+      -  int32_t (*get_class_var_basic_type_id)(void* runtime, int32_t class_var_address_id);
+      -  int32_t (*get_class_var_type_dimension)(void* runtime, int32_t class_var_address_id);
+      -  int32_t (*get_class_var_type_flag)(void* runtime, int32_t class_var_address_id);
+      +  int32_t (*get_class_var_basic_type_id)(void* runtime, void* class_var);
+      +  int32_t (*get_class_var_type_dimension)(void* runtime, void* class_var);
+      +  int32_t (*get_class_var_type_flag)(void* runtime, void* class_var);
+      -  int32_t (*get_class_var_current_basic_type_id)(void* runtime, int32_t method_address_id);
+      +  int32_t (*get_class_var_current_basic_type_id)(void* runtime, void* class_var);
+
     * The following Native Runtime API were removed.
       -  int32_t (*get_anon_method_method_id)(void* runtime, int32_t anon_method_id);
       -  int32_t (*get_basic_type_anon_methods_base_id)(void* runtime, int32_t basic_type_id);
