The following Native Runtime APIs were changed.
  [Incompatibe Changes]
    * The following Native Runtime APIs were changed.

      -  int32_t (*get_method_name_id)(void* runtime, int32_t method_address_id);
      +  int32_t (*get_method_name_id)(void* runtime, void* method);
      -  int32_t (*get_method_is_static)(void* runtime, int32_t method_address_id);
      -  int32_t (*get_method_is_anon)(void* runtime, int32_t method_address_id);
      -  int32_t (*get_method_is_native)(void* runtime, int32_t method_address_id);
      -  int32_t (*get_method_is_precompile)(void* runtime, int32_t method_address_id);
      -  int32_t (*get_method_call_stack_byte_vars_length)(void* runtime, int32_t method_address_id);
      -  int32_t (*get_method_call_stack_short_vars_length)(void* runtime, int32_t method_address_id);
      -  int32_t (*get_method_call_stack_int_vars_length)(void* runtime, int32_t method_address_id);
      -  int32_t (*get_method_call_stack_long_vars_length)(void* runtime, int32_t method_address_id);
      -  int32_t (*get_method_call_stack_float_vars_length)(void* runtime, int32_t method_address_id);
      -  int32_t (*get_method_call_stack_double_vars_length)(void* runtime, int32_t method_address_id);
      -  int32_t (*get_method_call_stack_object_vars_length)(void* runtime, int32_t method_address_id);
      -  int32_t (*get_method_call_stack_ref_vars_length)(void* runtime, int32_t method_address_id);
      -  int32_t (*get_method_mortal_stack_length)(void* runtime, int32_t method_address_id);
      -  int32_t (*get_method_opcodes_base_address_id)(void* runtime, int32_t method_address_id);
      -  int32_t (*get_method_opcodes_length)(void* runtime, int32_t method_address_id);
      -  int32_t (*get_method_args_base_address_id)(void* runtime, int32_t method_address_id);
      -  int32_t (*get_method_args_length)(void* runtime, int32_t method_address_id);
      +  int32_t (*get_method_is_static)(void* runtime, void* method);
      +  int32_t (*get_method_i

--- a/Changes
+++ b/Changes
@@ -138,6 +138,65 @@
       +  int32_t (*get_field_type_flag)(void* runtime, void* field);
       +  void* (*get_field_by_address_id)(void* runtime, int32_t field_address_id);
 
+      -  int32_t (*get_method_name_id)(void* runtime, int32_t method_address_id);
+      +  int32_t (*get_method_name_id)(void* runtime, void* method);
+      -  int32_t (*get_method_is_static)(void* runtime, int32_t method_address_id);
+      -  int32_t (*get_method_is_anon)(void* runtime, int32_t method_address_id);
+      -  int32_t (*get_method_is_native)(void* runtime, int32_t method_address_id);
+      -  int32_t (*get_method_is_precompile)(void* runtime, int32_t method_address_id);
+      -  int32_t (*get_method_call_stack_byte_vars_length)(void* runtime, int32_t method_address_id);
+      -  int32_t (*get_method_call_stack_short_vars_length)(void* runtime, int32_t method_address_id);
+      -  int32_t (*get_method_call_stack_int_vars_length)(void* runtime, int32_t method_address_id);
+      -  int32_t (*get_method_call_stack_long_vars_length)(void* runtime, int32_t method_address_id);
+      -  int32_t (*get_method_call_stack_float_vars_length)(void* runtime, int32_t method_address_id);
+      -  int32_t (*get_method_call_stack_double_vars_length)(void* runtime, int32_t method_address_id);
+      -  int32_t (*get_method_call_stack_object_vars_length)(void* runtime, int32_t method_address_id);
+      -  int32_t (*get_method_call_stack_ref_vars_length)(void* runtime, int32_t method_address_id);
+      -  int32_t (*get_method_mortal_stack_length)(void* runtime, int32_t method_address_id);
+      -  int32_t (*get_method_opcodes_base_address_id)(void* runtime, int32_t method_address_id);
+      -  int32_t (*get_method_opcodes_length)(void* runtime, int32_t method_address_id);
+      -  int32_t (*get_method_args_base_address_id)(void* runtime, int32_t method_address_id);
+      -  int32_t (*get_method_args_length)(void* runtime, int32_t method_address_id);
+      +  int32_t (*get_method_is_static)(void* runtime, void* method);
+      +  int32_t (*get_method_is_anon)(void* runtime, void* method);
+      +  int32_t (*get_method_is_native)(void* runtime, void* method);
+      +  int32_t (*get_method_is_precompile)(void* runtime, void* method);
+      +  int32_t (*get_method_call_stack_byte_vars_length)(void* runtime, void* method);
+      +  int32_t (*get_method_call_stack_short_vars_length)(void* runtime, void* method);
+      +  int32_t (*get_method_call_stack_int_vars_length)(void* runtime, void* method);
+      +  int32_t (*get_method_call_stack_long_vars_length)(void* runtime, void* method);
+      +  int32_t (*get_method_call_stack_float_vars_length)(void* runtime, void* method);
+      +  int32_t (*get_method_call_stack_double_vars_length)(void* runtime, void* method);
+      +  int32_t (*get_method_call_stack_object_vars_length)(void* runtime, void* method);
+      +  int32_t (*get_method_call_stack_ref_vars_length)(void* runtime, void* method);
+      +  int32_t (*get_method_mortal_stack_length)(void* runtime, void* method);
+      +  int32_t (*get_method_opcodes_base_address_id)(void* runtime, void* method);
+      +  int32_t (*get_method_opcodes_length)(void* runtime, void* method);
+      +  int32_t (*get_method_args_base_address_id)(void* runtime, void* method);
+      +  int32_t (*get_method_args_length)(void* runtime, void* method);
+      -  void* (*get_native_method_address)(void* runtime, int32_t method_address_id);
+      -  void (*set_native_method_address)(void* runtime, int32_t method_address_id, void* address);
+      -  void* (*get_precompile_method_address)(SPVM_ENV*, int32_t method_address_id);
+      -  void (*set_precompile_method_address)(void* runtime, int32_t method_address_id, void* address);
+      +  void* (*get_native_method_address)(void* runtime, void* method);
+      +  void (*set_native_method_address)(void* runtime, void* method, void* address);
+      +  void* (*get_precompile_method_address)(SPVM_ENV*, void* method);
+      +  void (*set_precompile_method_address)(void* runtime, void* method, void* address);
+      -  int32_t (*get_method_required_args_length)(void* runtime, int32_t method_address_id);
+      +  int32_t (*get_method_required_args_length)(void* runtime, void* method);
+      -  int32_t (*get_method_is_enum)(void* runtime, int32_t method_address_id);
+      +  int32_t (*get_method_is_enum)(void* runtime, void* method);
+      -  int32_t (*get_method_return_basic_type_id)(void* runtime, int32_t method_address_id);
+      -  int32_t (*get_method_return_type_dimension)(void* runtime, int32_t method_address_id);
+      -  int32_t (*get_method_return_type_flag)(void* runtime, int32_t method_address_id);
+      +  int32_t (*get_method_return_basic_type_id)(void* runtime, void* method);
+      +  int32_t (*get_method_return_type_dimension)(void* runtime, void* method);
+      +  int32_t (*get_method_return_type_flag)(void* runtime, void* method);
+      -  int32_t (*get_method_current_basic_type_id)(void* runtime, int32_t method_address_id);
+      -  int32_t (*get_field_current_basic_type_id)(void* runtime, int32_t method_address_id);
+      +  int32_t (*get_method_current_basic_type_id)(void* runtime, void* method);
+      +  int32_t (*get_field_current_basic_type_id)(void* runtime, void* method);
+   
     * The following Native Runtime API were removed.
       -  int32_t (*get_anon_method_method_id)(void* runtime, int32_t anon_method_id);
       -  int32_t (*get_basic_type_anon_methods_base_id)(void* runtime, int32_t basic_type_id);
